[package]

name = "segimap"
version = "0.0.1"
authors = []

[[bin]]

name = "segimap"
path = "src/main.rs"

[dependencies]
log = "*"
nom = "*"
num = "*"
rand = "*"
regex = "*"
rustc-serialize = "*"
rust-crypto = "*"
serde = "*"
serde_derive = "*"
time = "*"
toml = "*"
bufstream = "*"
walkdir = "*"

[features]
unstable = []
