[package]

name = "segimap"
version = "0.0.1"
authors = []

[[bin]]

name = "segimap"
path = "src/main.rs"

[dependencies]
clippy = { version = "0.0", optional = true }
log = "*"
nom = "*"
num = "*"
rand = "*"
regex = "*"
rustc-serialize = "*"
rust-crypto = "*"
serde = "*"
serde_derive = "*"
time = "*"
toml = "*"
bufstream = "*"
walkdir = "*"

[features]
unstable = []
nightly-testing = ["clippy", "unstable"]
