[package]

name = "segimap"
version = "0.0.1"
authors = []

[[bin]]

name = "segimap"
path = "src/main.rs"

[dependencies]
clippy = { version = "0.0", optional = true }
bufstream = "*"
log = "*"
nom = "*"
num = "*"
openssl = "*"
rand = "*"
regex = "*"
rust-crypto = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
time = "*"
toml = "*"
walkdir = "*"

[features]
unstable = []
nightly-testing = ["clippy", "unstable"]
