[package]
name = "segimap"
version = "0.0.1"
authors = []

[[bin]]

name = "segimap"
path = "src/main.rs"

[dependencies]
clippy = { version = "0.0", optional = true }
bufstream = "*"
env_logger = "*"
log = "*"
nom = "*"
num = "*"
openssl = "0.10"
rand = "*"
regex = "*"
rust-crypto = "*"
segimap_mime = { path = "../mime/" }
serde = "*"
serde_derive = "*"
serde_json = "*"
thiserror = "1.0"
time = "*"
toml = "*"
walkdir = "*"

[features]
unstable = []
nightly-testing = ["clippy", "unstable"]
